--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,10 +61,10 @@ jobs:
           name: Install SSH key
           command: |
             mkdir -p ~/.ssh
-            echo "$EC2_SSH_KEY" | base64 --decode > ~/.ssh/devops_jun.pem
+            echo "$EC2_SSH_KEY" | base64 -d > ~/.ssh/devops_jun.pem
             chmod 600 ~/.ssh/devops_jun.pem
             ls -l ~/.ssh/
-            cat ~/.ssh/devops_jun.pem | head -n 5 # Debugging step
+            cat ~/.ssh/devops_jun.pem | head -n 5  # Debugging step
       - run:
           name: Apply Terraform
           command: |
